--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,21 +4,27 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Logar">
+        <activity android:name=".SplashScreamAtividade"
+            android:theme="@style/tema_aju">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Logar"
+            android:theme="@style/tema_aju"
+            />
         <activity android:name=".MenuPrincipal" />
         <activity android:name=".Postagem" />
         <activity android:name=".ListarPostagens" />
-        <activity android:name=".ComentarPostagem"></activity>
+        <activity android:name=".ComentarPostagem" />
+
     </application>
 
 </manifest>
